Fix: added runtime

--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,7 @@
 services:
   - type: web
-    name: order-management-api
+    name: order-management-api-yash
+    runtime: java
     buildCommand: "./mvnw clean package"
     startCommand: "java -jar target/*.jar"
     plan: free
