--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,7 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.11.0</version>
 				<configuration>
+					<release>17</release>
 					<source>17</source>
 					<target>17</target>
 					<annotationProcessorPaths>
